# ageing_project

./: .dockerignore  .gitignore  README.md  pyproject.toml
config/: data_sources.yml  project.yml
docker/: Dockerfile.py  Dockerfile.r
docs/: PIPELINE_AND_DATA.md
reports/: ageing_project - Shortcut.lnk  methods.md  report.md  report_full.md  results.md
scripts/: 00_bootstrap_env.sh  05_extract_srs_life_tables.py  10_fetch_wdi.py  11_fetch_wdi_extra.py  12_fetch_who_gho.py  15_fetch_ucdp_brd.py  20_prepare_ucdp.py  30_export_wpp_from_r.R  40_build_panel.py  50_fit_models.py  55_fit_srs_models.py  60_make_figures.py  70_run_regressions.py  80_build_report.py  85_build_report_full.py  90_make_pdf_report.sh
src/war_hunger_aging/: cli.py  config.py  iso.py
src/war_hunger_aging.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/war_hunger_aging/analysis/: event_study.py  regressions.py
src/war_hunger_aging/io/: srs_life_tables.py  ucdp.py  wdi.py  who_gho.py  wpp.py
src/war_hunger_aging/model/: gm.py  gmh.py
src/war_hunger_aging/pipeline/: build_panel.py
src/war_hunger_aging/viz/: figures.py
tests/: test_model_recovery.py  test_ucdp_standardize.py
