[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "war-hunger-aging"
version = "0.1.0"
description = "Data + modeling pipeline for war/hunger perturbations of human aging curves."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "typer>=0.12",
  "rich>=13.7",
  "pycountry>=24.6.1",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
wha = "war_hunger_aging.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

